hphp/test/slow/finally/new_try_catch_010.php.expectf
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
HipHop Fatal error: Uncaught exception 'A' with message 'bla!' in %s/test/slow/finally/new_try_catch_010.php:27
Stack trace:
#0 %s/test/slow/finally/new_try_catch_010.php(%s): blah()
#1 {main}

Next exception 'C' with message '18' in %s/test/slow/finally/new_try_catch_010.php:31
Stack trace:
#0 %s/test/slow/finally/new_try_catch_010.php(62): blah()
#1 {main}
